# Projeto_Tec_Prog

./: CMakeLists.txt  Element.hpp  Platform.hpp  README.md  diagrama2_nao_completo.mdj  diagrama_uml.mdj  main.cpp
UML/: diagrama1_final.mdj  diagrama1_uml.mdj  diagrama2_nao_completo.mdj  diagrama3.mdj  diagrama_uml.mdj
assets/: MoonGraveyard  map1  map1.  map1.txt
assets/stages/: MoonGraveyard
assets/stages/Castle/: Castle
assets/stages/Graveyard/: MoonGraveyard  bossRoom
include/: Being.hpp  Game.hpp  Jogo.hpp
include/Animation/: Animator.hpp  Image.hpp
include/Characters/: Character.hpp  Player.hpp
include/Entities/: Button.hpp  Entity.hpp  Floor.hpp  HealthBar.hpp  Projectile.hpp  Text.hpp
include/Entities/Characters/: Character.hpp  Enemies.hpp  Player.hpp  Spirit.hpp
include/Entities/Characters/Enemies/: Bat.hpp  Death.hpp  Enemies.hpp  Enemy.hpp  (+3 more)
include/Entities/Obstacles/: Floor.hpp  MudHand.hpp  Obstacle.hpp  Platform.hpp  Spike.hpp
include/Entities/Stages/: stage.hpp
include/Gerenciadores/: Gerenciador_Grafico.hpp
include/List/: Element.hpp  EntityList.hpp  List.hpp
include/Managers/: CollisionManager.hpp  EventManager.hpp  GraphicManager.hpp  LeaderboardManager.hpp  StateManager.hpp
include/Personagens/: Jogador.hpp  Personagem.hpp
include/Personagens/Jogador/: Jogador.hpp
include/Stages/: BossRoom.hpp  Castle.hpp  Graveyard.hpp  Stage.hpp  Stage1.hpp  stage.hpp
include/States/: GameOverState.hpp  PlayerSelectState.hpp  StageSelectState.hpp  State.hpp  StateMenu.hpp  StatePause.hpp  StatePlaying.hpp  StateRanking.hpp
maps/: MoonGraveyard  MoonGraveyardTEST.tmj
src/: Being.cpp  Game.cpp  Jogo.cpp  main.cpp
src/Animation/: Animator.cpp  Image.cpp
src/Characters/: Character.cpp  Player.cpp
src/Entities/: Button.cpp  Entity.cpp  Floor.cpp  HealthBar.cpp  Projectile.cpp
src/Entities/Characters/: Character.cpp  Enemies.cpp  Player.cpp  Spirit.cpp
src/Entities/Obstacles/: Floor.cpp  MudHand.cpp  Obstacle.cpp  Platform.cpp  Spike.cpp
src/Gerenciadores/: Gerenciador_Grafico.cpp
src/List/: EntityList.cpp
src/Managers/: CollisionManager.cpp  EventManager.cpp  EventManager.hpp  GraphicManager.cpp  LeaderboardManager.cpp  StateManager.cpp
src/Personagens/: Jogador.cpp  Personagem.cpp
src/Personagens/Jogador/: Jogador.cpp
src/Stages/: BossRoom.cpp  Castle.cpp  Graveyard.cpp  Stage1.cpp  stage.cpp
src/States/: GameOverState.cpp  PlayerSelectState.cpp  StageSelectState.cpp  State.cpp  StateMenu.cpp  StatePause.cpp  StatePlaying.cpp  StateRanking.cpp
(+7 files in other folders)
